Header and edit menus z-index fixed

--- a/src/components/aside/index.module.css
+++ b/src/components/aside/index.module.css
@@ -1,5 +1,5 @@
 .aside {
-    z-index: 10;
+    z-index: 9;
 }
 
 .container {
