--- a/src/components/show-all-task-members/index.module.css
+++ b/src/components/show-all-task-members/index.module.css
@@ -8,7 +8,7 @@
     border-radius: 10px;
     margin: 20px 10px 10px 0;  
     padding: 5px; 
-    z-index: 10;
+    z-index: 8;
     width: 190px;
     max-height: 180px;
     -ms-overflow-style: none;
